2016-07-23 Robert Wolff <robert.wolff@cern.ch>
	* bugfix for OR flags for m_jet vectors

2016-07-22 Robert Wolff <robert.wolff@cern.ch>
	* prepare for v19 setup (manual change of TopObjectSelectionTools needed
	* added new GRL file for 2016 data 10514.3 pb-1

2016-07-21 Harish Potti <harish.potti@cern.ch>
	* add new Lumicalc files with new lumi tag OflLumi-13TeV-005.root
	
2016-07-20 David Hohn <david.hohn@cern.ch>
	* add truth higgs 4-vec and rapidity

2016-07-16 David Hohn <david.hohn@cern.ch>
	* Fix new Sherpa 2.2 RW

2016-07-16 Tamara Vazquez Schroeder <tamara.vazquez.schroeder@cern.ch>
	* Move to AT,2.4.15
	* New PMGTool Z+jets Sherpa 2.2 RW functions - WARNING: not fully working!
	* New 2016 GRL (for lumi < 1e34)

2016-07-04 Tamara Vazquez Schroeder <tamara.vazquez.schroeder@cern.ch>
	* Revert to modified ASG OLR (MuJetPtRatio and MuJetTrkPtRatio disabled)
	* Include new MuonEfficiencyCorrections and IsolationCorrections locally

2016-07-04 Tamara Vazquez Schroeder <tamara.vazquez.schroeder@cern.ch>
	* Revert to Run-1 OLR (bug-fix)
	* Include new MuonEfficiencyCorrections and IsolationCorrections locally

2016-07-01 Tamara Vazquez Schroeder <tamara.vazquez.schroeder@cern.ch>
	* Revert to Run-1 OLR

2016-07-01 Tamara Vazquez Schroeder <tamara.vazquez.schroeder@cern.ch>
	* Increase MuJetPtRatio and MuJetTrkPtRatio to 100000 to eliminate these requirements from ASG OLR

2016-09-30 Robert Wolff <robert.wolff@cern.ch>
	* Bugfix for running on data

2016-06-29 Harish Potti <harish.potti@cern.ch>
	* Move to AnalysisTop, 2.4.13
	* Update grid submission scripts

2016-06-29 Robert Wolff <robert.wolff@cern.ch>
	* Muon ICHEP recommendations
	* Instructions for new b-tagging CDI file
	* latest TauAnalysisTools
	* latest Electron recommendation
	* SF for 77% b-tagging WP

2016-06-28 Marco Sessa <marco.sessa@cern.ch>
	* Add new MET variables in the output tree: sumet, softTrk_et, softTrk_phi, softClus_et, softClus_phi

2016-06-24 Rhys Roberts <rhys.thomas.roberts@cern.ch>