@@ -1,3 +1,6 @@
+2016-08-09 Robert Wolff <robert.wolff@cern.ch>
+	* add x-section and k-factor branches from TopDataPreparation
+
 2016-07-23 Robert Wolff <robert.wolff@cern.ch>
 	* bugfix for OR flags for m_jet vectors
 
@@ -7,7 +10,7 @@
 
 2016-07-21 Harish Potti <harish.potti@cern.ch>
 	* add new Lumicalc files with new lumi tag OflLumi-13TeV-005.root
-	
+
 2016-07-20 David Hohn <david.hohn@cern.ch>
 	* add truth higgs 4-vec and rapidity
 
